--- a/head.html
+++ b/head.html
@@ -16,4 +16,5 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"
     ></script>
+    <script src="./js/index.js"></script>
 </head>
