--- a/head.html
+++ b/head.html
@@ -1,7 +1,9 @@
 <head>
-    <title>🍔 Nourriture Terrestre</title>
+    <title>Nourriture Terrestre</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="icon" href="./IMG/favicon-32x32.png" type="image/x-icon">
     <!-- jQuery via CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap 5 -->
